--- a/q8.html
+++ b/q8.html
@@ -30,7 +30,7 @@
       <a class="answer" href="./index.html">תשובה</a>
     </div>
     <div class="option">
-      <a class="answer" href="./wrong answer.html">פרידריך ניטשה</a>
+      <a class="answer" href="./q9.html">פרידריך ניטשה</a>
     </div>
   </div>
 
