--- a/q9.html
+++ b/q9.html
@@ -15,14 +15,11 @@
 
   <div class="question">
     <h2>?מה מהבאים הכי מצחיק</h2>
-    <iframe width="320"
-      src="https://www.youtube.com/embed/llGvsgN17CQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/llGvsgN17CQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2></h2>
-    <iframe width="320"
-      src="https://www.youtube.com/embed/uYOmtEcZ1lk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/uYOmtEcZ1lk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2></h2>
-    <iframe width="320"
-      src="https://www.youtube.com/embed/iBhAEcevu1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/iBhAEcevu1k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <h2></h2>
   </div>
 
